YAML-STANDARD/serviceForMySQL.yml

apiVersion: v1
kind: Service
metadata:
  name: mysqlsvc
spec:
  selector:
    app: mysql
  ports:
    - protocol: "TCP"
      port: 3306
      targetPort: 3306
  type: LoadBalancer
