YAML-STANDARD/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datascientest-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: rancher-secret
      hosts:
        - app1.mpcloud.cloudns.ph
  rules:
  - host: app1.mpcloud.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: fastapisvc
              port:
                number: 8080
